--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,11 +28,12 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
-              <a href="{{ site.baseurl }}/about">About</a>
-              <a href="{{ site.baseurl }}/archive">Archive</a>
+              <a href="{{ site.baseurl }}/">Noticias</a>
+              <a href="{{ site.baseurl }}/getting-started">Calendario</a>
+              <a href="{{ site.baseurl }}/search">Busqueda</a>
+              <a href="{{ site.baseurl }}/categories">Resumen mensual</a>
+              <a href="{{ site.baseurl }}/about">Sobre la pagina</a>
+              <a href="{{ site.baseurl }}/archive">Archivo</a>
             </nav>
           </header>
         </div>
